--- a/www/html/tabs/questsTab.html
+++ b/www/html/tabs/questsTab.html
@@ -19,6 +19,7 @@
                         <h4>Timeline</h4>
                         <ul>
                             <li v-for="task in quest.tasks">
+                                <template v-if="QuestManager().isTaskNewDay(quest, task)">{{TimeManager().getGameTime(task.startTime).toDateString()}} </template>
                                 <template v-if="task.status == 'complete'">{{TimeManager().getGameTime(task.startTime).toTimeString()}}: {{task.name}}
                                     <span v-if="task.skillTest === undefined" class='text-info'>Complete</span>
                                     <template v-else>
@@ -68,6 +69,7 @@
                         <h4>Timeline:</h4>
                         <ul>
                             <li v-for="task in quest.tasks">
+                                <template v-if="QuestManager().isTaskNewDay(quest, task)">{{TimeManager().getGameTime(task.startTime).toDateString()}} </template>
                                 <template v-if="task.status == 'complete'">{{TimeManager().getGameTime(task.startTime).toTimeString()}}: {{task.name}} <template v-if="task.attempt > 1">({{task.attempt}})</template>
                                 <span v-if="task.skillTest === undefined" class='text-info'>Complete</span>
                                 <template v-else>
