--- a/www/html/tabs/questsTab.html
+++ b/www/html/tabs/questsTab.html
@@ -20,9 +20,9 @@
                         <ul>
                             <li v-for="task in quest.tasks">
                                 <template v-if="QuestManager().isTaskNewDay(quest, task)">{{TimeManager().getGameTime(task.startTime).toDateString()}} </template>
-                                <template v-if="task.status == 'complete'">{{TimeManager().getGameTime(task.startTime).toTimeString()}}: {{task.name}}
-                                    <span v-if="task.skillTest === undefined" class='text-info'>Complete</span>
-                                    <template v-else>
+                                <template v-if="task.status == 'complete'">{{TimeManager().getGameTime(task.startTime).toTimeString()}}: {{task.name}} <template v-if="task.attempt > 1">({{task.attempt}})</template>
+                                <span v-if="task.skillTest === undefined" class='text-info'>Complete</span>
+                                <template v-else>
                                         <span v-if="task.success" class="text-success">Success</span>
                                         <span v-if="!task.success" class="text-danger">Fail</span>
                                     </template>
