Added proper nav bar

--- a/www/data.html
+++ b/www/data.html
@@ -28,11 +28,37 @@
 </head>
 
 <body>
-    <div class="container">
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                <span class="navbar-brand" href="#">Otium Data</span>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="./" target="_blank">Game</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="https://jameshurburgh.github.io/about.html" target="_blank">About the Author</a></li>
+                            <li><a href="https://www.patreon.com/bePatron?u=6205348" target="_blank">Become a Patron!</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="container" style="padding-bottom: 65px; padding-top: 65px;">
         <div class="row">
             <div id="data">
-                Adventurers of Otium data manager
-
                 <ul class="nav nav-tabs">
                     <li class="active">
                         <a href="#locations" data-toggle="tab" aria-expanded="true">Locations</a>
